...
            action: #selector(self.logout)
        )

        self.navigationItem.leftBarButtonItem = self.logoutButton

        self.addRestaurantButton = UIBarButtonItem(
            title: "Add Restaurant",
            style: UIBarButtonItemStyle.plain,
            target: self,
            action: #selector(self.showAddRestaurantScreen)
        )

        self.navigationItem.rightBarButtonItem = self.addRestaurantButton

    }

    private func setupLabels() {
        self.titleLabel.text = "Restaurants"
    }
    
    private func addSubviews() {
        self.view.addSubview(self.titleLabel)
    }

...
